<resources>
    <string name="app_name">Translate</string>
    <string name="title_authorization">Authorization</string>
    <string name="hintUsername">Username</string>
    <string name="signIn">SIGN IN</string>
    <string name="hintPassword">Password</string>
    <string name="newAccount">Creast new account</string>
    <string name="unableSign">Unable to Sign in</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="version">Build 3076
                            Version 18.7.0 of 19.09.2018</string>
    <string name="moreApps">More Yandex apps</string>
    <string name="license">License agreement</string>
    <string name="privacy">Privacy policy</string>
    <string name="copyright">©2013-2018 YANDEX</string>

    <string name="translate_to">English</string>
    <string name="translate_from">Russian</string>
    <string name="hint">Type text or a site address</string>
    <string name="microphon">Microphon</string>
    <string name="camera">Camera</string>
    <string name="agreement"> <h1> User Agreement for Yandex Services</h1>  </string>

    <string name="title_registration">Registration</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Mobile phone</string>
    <string name="noPhone">I don\'t have a phone number</string>
    <string name="next">NEXT</string>
    <string name="privacy_police">By tapping Next, I accept the terms of the <a href='http://www.google.com'>  User Agreement </a> and consent that Yandex will process my personal information in accordance with the terms specified in the <a href='http://www.google.com'>  Privacy Policy </a></string>


    <string name="title">Settings</string>
    <string name="account">Account</string>
    <string name="login">LOG IN</string>

    <string name="download">Download offline translation</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="quickTranslate">Quick translate</string>
    <string name="translateClipboard">Translate clipboard</string>
    <string name="autorotateImage">Autorotate image</string>
    <string name="tapReturn">Tap Return to tranclate</string>
    <string name="predictiveTyping">Predictive typing</string>
    <string name="detectLanguage">Detect language</string>
    <string name="offlineMode">Offline Mode</string>


</resources>
